# papers-ocr-benchmarks

./: .gitignore  BENCHMARK_DOCUMENTATION.md  Enhanced AI OCR Extraction Pipeline for Scientific Literature.md  FINAL_EXECUTION_GUIDE.md  HOW_TO_START_BENCHMARKS.md  OCR_Benchmark_GPU_Optimized.ipynb  OCR_Benchmark_Scientific_Literature.ipynb  PROJECT_SUMMARY.md  PYTHON_FILES_SUMMARY.md  README.md  README_EXECUTION.md  README_FINAL.md  SERVER_README.md  STRUCTURE_ANALYSIS_REPORT.md  benchmarking.ipynb  benchmarking_metrics_explained.md  client_example.py  demo_server.py  detection-383-pdf.ipynb  enhanced_pymupdf4llm_pipeline.ipynb  improved_pymupdf4llm_pipeline.py  marker_demo_blocks.ipynb  ocr_benchmark_final.py  ocr_benchmark_gpu_optimized.py  ocr_benchmark_notebook.py  ocr_benchmark_notebook_clean.py  ocr_benchmark_updated.py  ocr_benchmark_working.py  preProcessing_LlamaMarkdown.ipynb  prep_chunk.ipynb  pymupdf4llm_ocr_pipeline.py  pymupdfLLM.ipynb  pymupdfllm_pipeline.ipynb  pyproject.toml  run_complete_benchmark.py  run_real_ocr_benchmark.py  server.py  setup_gpu_environment.py  test_benchmark.py  test_gpu_setup.py  (+2 more)
examples/outputs/: Allossogbe_et_al_2017_Mal_J_Docling_structure.json  (+10 more)
output_markdown/: 2014-Combining_organophosphate_treated_wall_linings_and_long-lasting_insecticidal_nets_for_improved_control_of_pyrethroi.md  Allossogbe_et_al_2017_Mal_J PT 1.md  Allossogbe_et_al_2017_Mal_J.md  Muller_et_al_2006_Bull_World_Health_Org.md  tmp.md
scripts/: ocr_benchmark_gpu_optimized.py  ocr_text.py  setup_gpu_environment.py  structure_parser.py
(+10 files in other folders)
